# torch-fastText

./: .gitignore  .pre-commit-config.yaml  MLproject  README.md  benchmark.sh  pyproject.toml  requirements.txt  setup.py  train.sh
.github/workflows/: python-package.yml  python-publish.yml
notebooks/: example.ipynb  example.qmd  experiments.ipynb  tests.ipynb  torchFastText_config.json  utils.py
slides/: _quarto.yaml  index.qmd
src/: __init__.py  benchmark.py  checkers.py  dataset.py  experiments.ipynb  explainability_viz.py  lightning_module.py  model.py  pytorch_model.py  tokenizer.py  torchFastText.py  train.py  utils.py
src/config/: dataset.py  preprocess.py
src/datasets/: dataset.py  tokenizer.py
src/explainability/: explainability_viz.py  utils.py
src/losses/: ova.py
src/model/: lightning_module.py  pytorch_model.py
src/models/: model.py
src/preprocess/: __init__.py  preprocess.py
src/test/: tests.py
src/test/test_data/: dbpedia_sample_10000.csv
src/tests/: tests.py
src/tests/test_data/: dbpedia_sample_1000.csv
src/tokenizer/: tokenizer.py  utils.py
src/torchFastText/: __init__.py  torchFastText.py
src/torchFastText/datasets/: tokenizer.py
src/torchFastText/model/: lightning_module.py  pytorch_model.py
src/torchfastText/: utils.py
src/torchfastText/datasets/: dataset.py
src/torchfastText/preprocess/: __init__.py
tests/: test_all.py  test_fasttext_model_dataset.py  test_ngramtokenizer.py  tests.py
tests/test_data/: dbpedia_sample_1000.csv  dbpedia_sample_10000.csv
torchFastText/: __init__.py  torchFastText.py
torchFastText/datasets/: __init__.py  dataset.py  tokenizer.py
torchFastText/explainability/: visualisation.py
torchFastText/model/: __init__.py  lightning_module.py  losses.py  pytorch_model.py
torchFastText/preprocess/: __init__.py  preprocess.py
torchFastText/utilities/: __init__.py  checkers.py  utils.py
